--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+html {
+  --primaryBackground: #f3f3f3;
+  --primaryTextColor: #000000;
+  --secondaryBackgroundColor: rgb(221, 221, 221);
+  --secondaryTextColor: rgb(124, 124, 124);
+  --primaryAccentColor: rgb(14, 151, 87);
+  --secondaryAccentColor: rgb(7, 77, 44);
+}
+
+html[data-theme="dark"] {
+  --primaryBackground: #000000;
+  --primaryTextColor: #ffffff;
+  --secondaryBackgroundColor: rgb(34, 34, 34);
+  --secondaryTextColor: rgb(230, 230, 230);
+  --primaryAccentColor: rgb(255, 172, 19);
+  --secondaryAccentColor: rgb(255, 202, 104);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
